clusters/ocp/ansible-automation-platform/redhat-lab-ssh-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redhat-lab-ssh
  namespace: ansible-automation-platform
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: redhat-lab
          podSelector:
            matchLabels:
              app.kubernetes.io/part-of: redhat-lab
              kubevirt.io: virt-launcher
      ports:
        - port: 22
          protocol: TCP
